# teaching_environment

./: 4o_traces  README.md  parsing.py  pyproject.toml  teaching_env.py
.prime/: .env-metadata.json
data/: textbook.txt
data/markdown/: Chapter-2-sequences.md  Math-textbook-page.md
data/markdown/biology/: BiotechnologyFoundationsOGrady-page.md  Protein-Synthesis-page.md  original-78fd06b0810504015e26dfc09f7da3de-page.md
data/markdown/business/: Developing New Products and Services-page.md  Sustainable-Business-page.md  financial-accounting-textbook-page.md  financial-accounting-textbook-section.md
data/markdown/chemistry/: Chemistry-Techniques-DAlbert-20251118-1-page.md  chemistry-2e-textbook-page.md  chemistry-2e-textbook-section.md  organic-chemistry-with-biological-page.md
data/markdown/computer-science/: Eloquent_JavaScript.md  Inventory-Analytics-page.md  Signal-Computing-page.md  thinkpython2-textbook-chapter.md  web-programming-page.md
data/markdown/humanities/: American_Government_4e-page.md  Literature-the-humanities-page.md  critical-expressivism-page.md  introduction-sociology-3e-textbook-page.md  writing-spaces-readings-on-writing-vol-1-page.md
data/markdown/math/: C1U4SF-page.md  (+4 more)
tests/: test_adversarial.py
traces/: qwen_traces
verifier/: __init__.py  base.py  coherence.py  concept_coverage.py  contradiction_detection.py  embedder.py  entailment_chain.py  example_grounding.py  information_density.py  keyword_extractor.py  nli_model.py  originality.py  prerequisite_order.py  readability_curve.py  sentence_coverage.py  teaching_verifier.py
(+67 files in other folders)
