[project]
name = "teaching-env"
description = "Evaluates LLM explanations of textbook excerpts across pedagogy dimensions including concept coverage, coherence, prerequisite ordering, and originality."
tags = ["single-turn", "teaching", "pedagogy", "nlp", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.12",
    "fastembed",
    "scikit-learn",
    "spacy>=3.7.4",
    "nltk",
    "textstat",
    "datasets",
    "networkx",
    "markitdown",
    "python-frontmatter",
    "markdown-it-py",
    "rouge-score",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["teaching_env.py", "parsing.py", "verifier/", "data/", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: requires model loading (fastembed + NLI ONNX, ~5 min on first run)",
]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
